# ouro

./: ARCH.md  CHANGELOG.md  README.md  config.py  harbor-run.sh  interactive.py  main.py  pyproject.toml
agent/: agent.py  base.py  task_policy.py  tasks.py  verification.py
agent/skills/: __init__.py  parser.py  registry.py  render.py  types.py
agent/skills/system/agent-browser/: SKILL.md
agent/skills/system/skill-installer/: SKILL.md
agent/skills/system/skill-installer/scripts/: _common.py  install_skill.py  list_skills.py
bot/: LARK.md  README.md  SLACK.md  message_queue.py  proactive.py  server.py  session_router.py  soul.py
bot/channel/: __init__.py  base.py  feishu.py  lark.py  slack.py
docs/: bot-guide.md  cli-guide.md  configuration.md  examples.md  memory-management.md  tasks-subagents.md
llm/: chatgpt_auth.py  litellm_adapter.py  message_types.py  model_manager.py  oauth_model_catalog.py  oauth_model_sync.py
memory/: compressor.py  manager.py  short_term.py
memory/long_term/: __init__.py  consolidator.py  store.py
orchestration/: __init__.py  v1.py
ouro_harbor/: README.md
rfc/: 009-codex-login-via-litellm-chatgpt.md  010-reasoning-controls.md  012-bot-message-queue.md  012-bot-mode.md  012-cache-safe-compaction.md  012-subagent-artifact-retrieval.md  013-skills-simplification.md  014-proactive-mechanisms.md  README.md
scratchpad/research/: clawdata.md  hn-discussion.md
scratchpad/sessions/: buffers-20260303-065901-96752.json
scratchpad/signals/: predictor-20260303-065901-96752.json  workspace-20260303-065901-96752.json
scripts/: update_oauth_model_catalog.py
test/: test_bot_message_queue.py  test_bot_proactive.py  test_bot_server.py  test_bot_session_router.py  test_bot_soul.py  test_chatgpt_auth.py  test_cron_tool.py  test_feishu_channel.py  test_heartbeat_tool.py  test_lark_channel.py  test_litellm_adapter.py  test_memory.py  test_model_manager_chatgpt.py  test_multi_task.py  test_oauth_model_catalog.py  test_oauth_model_sync.py  test_orchestration_v1.py  test_ralph_loop.py  test_reasoning_effort.py  test_send_file_tool.py  test_skills_registry.py  test_skills_render.py  test_slack_channel.py  test_sub_agent_batch.py  test_task_board.py  test_task_dump_md_request_parse.py  test_task_tools.py  test_update_oauth_model_catalog.py
test/memory/: conftest.py  test_compressor.py  test_integration.py  test_memory_manager.py  test_short_term.py
test/memory/long_term/: conftest.py  test_consolidator.py  test_daily_store.py  test_long_term_manager.py  test_store.py
tools/: __init__.py  cron_tool.py  heartbeat_tool.py  multi_task.py  send_file_tool.py  sub_agent_batch.py  task_board.py  task_tools.py  web_search.py
utils/: runtime.py  terminal_ui.py
utils/tui/: progress.py  skills_ui.py  status_bar.py
